[package]
name = "board-kontrolir"
version = "0.1.0"
authors = []
edition = "2018"

[features]
default = ["rt"]
rt = ["atmega328p-hal/rt"]

[dependencies]
atmega328p-hal = { git = "https://github.com/jkristell/avr-hal.git", branch = "reexport-generic-hal", features = ["atmega328pb"] }
ufmt = "0.1.0"
infrared ="0.7.0"

[dev-dependencies]
panic-halt = "0.2.0"
nb = "0.1.2"

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"

[patch.crates-io]
# XXX: Temporary fix for avr-rust/rust#148
ufmt = { git = "https://github.com/Rahix/ufmt.git", rev = "12225dc1678e42fecb0e8635bf80f501e24817d9" }
